On branch services

--- a/services.html
+++ b/services.html
@@ -71,7 +71,7 @@
   </section class="container">
       <nav class="navbar px-5 py-3 navbar-expand-lg navbar-light bg-primary">
           <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#"><p id="hom">Home</p></a>
+            <a class="navbar-brand text-white" href="/"><p id="hom">Home</p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -81,10 +81,10 @@
                     <a class="nav-link active text-white" aria-current="page" href="#"><p id="nap">About us</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">Services</p></a>
+                    <a class="nav-link active text-white" href="services.html"><p id="nap">Services</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">Doctors</p></a>
+                    <a class="nav-link active text-white" href="doctors.html"><p id="nap">Doctors</p></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active text-white" href="#"><p id="nap">News</p></a>
