--- a/navbar.html
+++ b/navbar.html
@@ -21,7 +21,7 @@
                 <div class="col-lg-4 col-12 col-md-4">
                   <div class="row" >
                     <div class="col-lg-3 col-3">
-                        <div class=""><img class="ms-3 mt-2 " src="./img/call.svg" style="width:"" alt=""></div>
+                        <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
                   </div>
                     <div class="col-9 col-lg-9">
                       <h5 class="fpp col-12">EMERGENCY</h5>
