--- a/doctors.html
+++ b/doctors.html
@@ -25,7 +25,7 @@
                 <div class="col-lg-4 col-12 col-md-4">
                   <div class="row" >
                     <div class="col-lg-3 col-3">
-                        <div class=""><img class="ms-3 mt-2 " src="./img/call.svg" style="width:"" alt=""></div>
+                        <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
                   </div>
                     <div class="col-9 col-lg-9">
                       <h5 class="fpp col-12">EMERGENCY</h5>
@@ -36,7 +36,7 @@
                 <div class="col-lg-4 col-12 col-md-4">
                   <div class="row">
                     <div class="col-3">
-                        <div class="col-6"><img class="ms-3 mt-2" src="./img/tim-cir.svg" style="" alt=""></div>
+                        <div class="col-6"><img class="ms-3 mt-2" src="./img/tim-cir.svg"  alt=""></div>
                     </div>
                     <div class="col-9">
                       <h5 class="col-12 fpp">WORK HOUR</h5>
@@ -48,7 +48,7 @@
                   <div class="row">
                     <div class="col-3">
                       <div class="row">
-                        <div class="col-6"><img class="ms-3 mt-2" src="./img/loc1.svg" style="" alt=""></div>
+                        <div class="col-6"><img class="ms-3 mt-2" src="./img/loc1.svg"  alt=""></div>
                       </div>
                     </div>
                     <div class="col-9">
@@ -64,7 +64,7 @@
   </section class="container">
       <nav class="navbar px-5 py-3 navbar-expand-lg navbar-light bg-primary">
           <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#"><p id="hom">Home</p></a>
+            <a class="navbar-brand text-white" href="index.html"><p id="hom">Home</p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -103,14 +103,14 @@
         <div class="row pa flex-wrap">
             <div class="col">
                 <div class="card mt-4" style="  text-align: center; ">
-                    <img src="doc_images\ani-kolleshi-7jjnJ-QA9fY-unsplash.jpg" class="card-img-top" style="height: 15em;" alt=" ... ">
+                    <img src="./img/ani-kolleshi-7jjnJ-QA9fY-unsplash.jpg" class="card-img-top" style="height: 15em;" alt=" ... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">Hassan Aishat</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">Pediatrician</p>
                         <div class="social ">
                             <div class="d-flex ">
                                 <div class="col ">
-                                    <img src="doc_images\facebook-f.svg " alt=" ">
+                                    <img src="./img/facebook-f.svg " alt=" ">
                                 </div>
                                 <div class="col ">
                                     <img src="doc_images\instagram.svg " alt=" ">
