--- a/doctors.html
+++ b/doctors.html
@@ -74,16 +74,16 @@
                     <a class="nav-link active text-white" aria-current="page" href="#"><p id="nap">About us</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">Services</p></a>
+                    <a class="nav-link active text-white" href="services.html"><p id="nap">Services</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">Doctors</p></a>
+                    <a class="nav-link active text-white" href="doctors.html"><p id="nap">Doctors</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">News</p></a>
+                    <a class="nav-link active text-white" href="news.html"><p id="nap">News</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="contact_us.html"><p id="nap">Contact</p></a>
+                    <a class="nav-link active text-white" href="#"><p id="nap">Contact</p></a>
                   </li>
                 </ul>
               <form class="">
