--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
                         <div class="col-lg-4 col-12 col-md-4">
                           <div class="row" >
                             <div class="col-lg-3 col-3">
-                                <div class=""><img class="ms-3 mt-2 " src="./img/call.svg" style="width:"" alt=""></div>
+                                <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
                           </div>
                             <div class="col-9 col-lg-9">
                               <h5 class="fpp col-12">EMERGENCY</h5>
@@ -64,7 +64,7 @@
           </section class="container">
               <nav class="navbar px-5 py-3 navbar-expand-lg navbar-light bg-primary">
                   <div class="container-fluid">
-                    <a class="navbar-brand text-white" href="#"><p id="hom">Home</p></a>
+                    <a class="navbar-brand text-white" href="index.html"><p id="hom">Home</p></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -74,16 +74,16 @@
                             <a class="nav-link active text-white" aria-current="page" href="#"><p id="nap">About us</p></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active text-white" href="#"><p id="nap">Services</p></a>
+                            <a class="nav-link active text-white" href="services.html"><p id="nap">Services</p></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active text-white" href="#"><p id="nap">Doctors</p></a>
+                            <a class="nav-link active text-white" href="doctors.html"><p id="nap">Doctors</p></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active text-white" href="#"><p id="nap">News</p></a>
+                            <a class="nav-link active text-white" href="news.html"><p id="nap">News</p></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active text-white" href="contact_us.html"><p id="nap">Contact</p></a>
+                            <a class="nav-link active text-white" href="#"><p id="nap">Contact</p></a>
                           </li>
                         </ul>
                       <form class="">
