--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
                         <div class="col-lg-4 col-12 col-md-4">
                           <div class="row" >
                             <div class="col-lg-3 col-3">
-                                <div class=""><img class="ms-3 mt-2 " src="./img/call.svg" style="width:"" alt=""></div>
+                                <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
                           </div>
                             <div class="col-9 col-lg-9">
                               <h5 class="fpp col-12">EMERGENCY</h5>
@@ -36,7 +36,7 @@
                         <div class="col-lg-4 col-12 col-md-4">
                           <div class="row">
                             <div class="col-3">
-                                <div class="col-6"><img class="ms-3 mt-2" src="./img/tim-cir.svg" style="" alt=""></div>
+                                <div class="col-6"><img class="ms-3 mt-2" src="./img/tim-cir.svg" alt=""></div>
                             </div>
                             <div class="col-9">
                               <h5 class="col-12 fpp">WORK HOUR</h5>
@@ -48,7 +48,7 @@
                           <div class="row">
                             <div class="col-3">
                               <div class="row">
-                                <div class="col-6"><img class="ms-3 mt-2" src="./img/loc1.svg" style="" alt=""></div>
+                                <div class="col-6"><img class="ms-3 mt-2" src="./img/loc1.svg"  alt=""></div>
                               </div>
                             </div>
                             <div class="col-9">
