--- a/contact_us.html
+++ b/contact_us.html
@@ -83,7 +83,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">
+                        <a class="nav-link active text-white" aria-current="page" href="about.html">
                             <p id="nap">About us</p>
                         </a>
                     </li>
@@ -98,7 +98,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="#">
+                        <a class="nav-link active text-white" href="news.html">
                             <p id="nap">News</p>
                         </a>
                     </li>
