--- a/doctors.html
+++ b/doctors.html
@@ -83,7 +83,7 @@
                     <a class="nav-link active text-white" href="news.html"><p id="nap">News</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">Contact</p></a>
+                    <a class="nav-link active text-white" href="contact_us.html"><p id="nap">Contact</p></a>
                   </li>
                 </ul>
               <form class="">
