--- a/news.html
+++ b/news.html
@@ -108,7 +108,7 @@
                     <div class="flex">
 
                         <a href="#"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
-                        <button class=" py-2 px-3 text-white btnn fw-bold icon" type="submit">Appointment</button>
+                        <button class=" py-2 px-3 text-white btnn fw-bold nav-icon" type="submit">Appointment</button>
                     </div>
                 </form>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
