--- a/doctors.html
+++ b/doctors.html
@@ -17,9 +17,9 @@
     </div>
     <div class="container">
         <div class="row pa flex-wrap">
-            <div class="col">
-                <div class="card mt-4" style="  text-align: center; ">
-                    <img src="doc_images\ani-kolleshi-7jjnJ-QA9fY-unsplash.jpg" class="card-img-top" style="height: 15em;" alt=" ... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4 cardy" style="  text-align: center; ">
+                    <img src="doc_images\ani-kolleshi-7jjnJ-QA9fY-unsplash.jpg" class="card-img-top img img-fluid" style="height: 15em;" alt=" ... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">Hassan Aishat</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">Pediatrician</p>
@@ -41,9 +41,9 @@
                     <a href="# " class=" " style="background-color: #01015c; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; padding: 10px 12px; color: #fff; text-decoration: none; ">View Profile</a>
                 </div>
             </div>
-            <div class="col ">
-                <div class="card mt-4 " style=" text-align: center; ">
-                    <img src="doc_images\istockphoto-1249601148-170667a.jpg " class="card-img-top" style="height: 15em;" alt="... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4 cardy " style=" text-align: center; ">
+                    <img src="doc_images\istockphoto-1249601148-170667a.jpg " class="card-img-top img img-fluid" style="height: 15em;" alt="... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">Barry Caitlin</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">Cardiologist</p>
@@ -65,9 +65,9 @@
                     <a href="# " class=" " style="background-color: #01015c; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; padding: 10px 12px; color: #fff; text-decoration: none; ">View Profile</a>
                 </div>
             </div>
-            <div class="col ">
-                <div class="card mt-4 " style="  text-align: center; ">
-                    <img src="doc_images\istockphoto-1266812094-170667a.jpg " class="card-img-top" style="height: 15em;" alt="... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4  cardy" style="  text-align: center; ">
+                    <img src="doc_images\istockphoto-1266812094-170667a.jpg " class="card-img-top img img-fluid" style="height: 15em;" alt="... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">Joe Iris</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">Dermatologist</p>
@@ -92,9 +92,9 @@
 
         </div>
         <div class="row pa flex-wrap">
-            <div class="col">
-                <div class="card mt-4" style="  text-align: center; ">
-                    <img src="doc_images\freestock_2415062.jpg" class="card-img-top" style="height: 15em;" alt=" ... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4 cardy" style="  text-align: center; ">
+                    <img src="doc_images\freestock_2415062.jpg" class="card-img-top img img-fluid" style="height: 15em;" alt=" ... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">Bob Hope</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">General Practitioner</p>
@@ -116,9 +116,9 @@
                     <a href="# " class=" " style="background-color: #01015c; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; padding: 10px 12px; color: #fff; text-decoration: none; ">View Profile</a>
                 </div>
             </div>
-            <div class="col ">
-                <div class="card mt-4 " style=" text-align: center; ">
-                    <img src="doc_images\freestock_40667806.jpg " class="card-img-top" style="height: 15em;" alt="... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4 cardy " style=" text-align: center; ">
+                    <img src="doc_images\freestock_40667806.jpg " class="card-img-top img img-fluid" style="height: 15em;" alt="... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">James Allen</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">Dentist</p>
@@ -140,9 +140,9 @@
                     <a href="# " class=" " style="background-color: #01015c; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; padding: 10px 12px; color: #fff; text-decoration: none; ">View Profile</a>
                 </div>
             </div>
-            <div class="col ">
-                <div class="card mt-4 " style="  text-align: center; ">
-                    <img src="doc_images\freestock_41409349.jpg " class="card-img-top" style="height: 15em;" alt="... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4  cardy" style="  text-align: center; ">
+                    <img src="doc_images\freestock_41409349.jpg " class="card-img-top img img-fluid" style="height: 15em;" alt="... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">Cisco Rahmon</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">Pediatrician</p>
