--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                   <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="#"><p id="nap">About us</p></a>
+                    <a class="nav-link active text-white" aria-current="page" href="about.html"><p id="nap">About us</p></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active text-white" href="services.html"><p id="nap">Services</p></a>
