--- a/about.html
+++ b/about.html
@@ -14,30 +14,30 @@
   <!-- navigation -->
     <nav class="navbar px-5 py-3 navbar-expand-lg navbar-light bg-primary ">
           <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#"><p id="hom">Home</p></a>
+            <a class="navbar-brand text-white" href="index.html"><p id="hom">Home</p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                   <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="#"><p id="nap">About us</p></a>
+                    <a class="nav-link active text-white" aria-current="page" href="about.html"><p id="nap">About us</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">Services</p></a>
+                    <a class="nav-link active text-white" href="services.html"><p id="nap">Services</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">Doctors</p></a>
+                    <a class="nav-link active text-white" href="doctors.html"><p id="nap">Doctors</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">News</p></a>
+                    <a class="nav-link active text-white" href="news.html"><p id="nap">News</p></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active text-white" href="contact_us.html"><p id="nap">Contact</p></a>
                   </li>
                 </ul>
               <form class="">
-                <a href="#"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
+                <a href="appointment.html"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
                   <button class=" py-2 px-3 text-white btnn fw-bold" type="submit">Appointment</button>
               </form>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
