--- a/contact_us.html
+++ b/contact_us.html
@@ -91,7 +91,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">
+                            <a class="nav-link active text-white" aria-current="page" href="about.html">
                                 <p id="nap">About us</p>
                             </a>
                         </li>
@@ -106,7 +106,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-white" href="#">
+                            <a class="nav-link active text-white" href="news.html">
                                 <p id="nap">News</p>
                             </a>
                         </li>
@@ -117,7 +117,7 @@
                         </li>
                     </ul>
                     <form class="">
-                        <a href="#">
+                        <a href="appointment.html">
                             <img src="./img/search.svg" alt="" class="justify-content-center pe-2">
                         </a>
                         <button class=" py-2 px-3 text-white btnn fw-bold" type="submit">Appointment</button>
@@ -596,16 +596,16 @@
                         <a href="" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
                             <p>Important links</p>
                         </a>
-                        <a href="" class="text-decoration-none text-white cc"> Appointments </a>
-                        <a href="" class="text-decoration-none text-white cc">
+                        <a href="appointment.html" class="text-decoration-none text-white cc"> Appointments </a>
+                        <a href="doctors.html" class="text-decoration-none text-white cc">
                             <br>Doctors </a>
-                        <a href="" class="text-decoration-none text-white cc">
+                        <a href="services.html" class="text-decoration-none text-white cc">
                             <br>Services </a>
-                        <a href="" class="text-decoration-none text-white cc">
+                        <a href="about.html" class="text-decoration-none text-white cc">
                             <br>About Us</a>
                     </div>
                     <div class="col-lg-3 col-md-4  mt-1">
-                        <a href="" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
+                        <a href="contact_us.html" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
                             <p>Contacts Us</p>
                         </a>
                         <p class="mt-3 cc">Call: (237) 681-812-255
