--- a/doctors.html
+++ b/doctors.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="doc_styles\doc.css">
     <link rel="stylesheet" href="doc_styles\bootstrap.min.css">
-        <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/navbar.css">
 
 
 </head>
@@ -71,23 +71,23 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                   <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="#"><p id="nap">About us</p></a>
+                    <a class="nav-link active text-white" aria-current="page" href="about.html"><p id="nap">About us</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">Services</p></a>
+                    <a class="nav-link active text-white" href="services.html"><p id="nap">Services</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">Doctors</p></a>
+                    <a class="nav-link active text-white" href="doctors.html"><p id="nap">Doctors</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">News</p></a>
+                    <a class="nav-link active text-white" href="news.html"><p id="nap">News</p></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active text-white" href="contact_us.html"><p id="nap">Contact</p></a>
                   </li>
                 </ul>
               <form class="">
-                <a href="#"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
+                <a href="appointment.html"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
                   <button class=" py-2 px-3 text-white btnn fw-bold" type="submit">Appointment</button>
               </form>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -101,16 +101,16 @@
     </div>
     <div class="container">
         <div class="row pa flex-wrap">
-            <div class="col">
-                <div class="card mt-4" style="  text-align: center; ">
-                    <img src="./img/ani-kolleshi-7jjnJ-QA9fY-unsplash.jpg" class="card-img-top" style="height: 15em;" alt=" ... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4 cardy" style="  text-align: center; ">
+                    <img src="doc_images\ani-kolleshi-7jjnJ-QA9fY-unsplash.jpg" class="card-img-top img img-fluid" style="height: 15em;" alt=" ... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">Hassan Aishat</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">Pediatrician</p>
                         <div class="social ">
                             <div class="d-flex ">
                                 <div class="col ">
-                                    <img src="./img/facebook-f.svg " alt=" ">
+                                    <img src="doc_images\facebook-f.svg " alt=" ">
                                 </div>
                                 <div class="col ">
                                     <img src="doc_images\instagram.svg " alt=" ">
@@ -125,9 +125,9 @@
                     <a href="# " class=" " style="background-color: #01015c; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; padding: 10px 12px; color: #fff; text-decoration: none; ">View Profile</a>
                 </div>
             </div>
-            <div class="col ">
-                <div class="card mt-4 " style=" text-align: center; ">
-                    <img src="doc_images\istockphoto-1249601148-170667a.jpg " class="card-img-top" style="height: 15em;" alt="... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4 cardy " style=" text-align: center; ">
+                    <img src="doc_images\istockphoto-1249601148-170667a.jpg " class="card-img-top img img-fluid" style="height: 15em;" alt="... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">Barry Caitlin</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">Cardiologist</p>
@@ -149,9 +149,9 @@
                     <a href="# " class=" " style="background-color: #01015c; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; padding: 10px 12px; color: #fff; text-decoration: none; ">View Profile</a>
                 </div>
             </div>
-            <div class="col ">
-                <div class="card mt-4 " style="  text-align: center; ">
-                    <img src="doc_images\istockphoto-1266812094-170667a.jpg " class="card-img-top" style="height: 15em;" alt="... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4  cardy" style="  text-align: center; ">
+                    <img src="doc_images\istockphoto-1266812094-170667a.jpg " class="card-img-top img img-fluid" style="height: 15em;" alt="... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">Joe Iris</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">Dermatologist</p>
@@ -176,9 +176,9 @@
 
         </div>
         <div class="row pa flex-wrap">
-            <div class="col">
-                <div class="card mt-4" style="  text-align: center; ">
-                    <img src="doc_images\freestock_2415062.jpg" class="card-img-top" style="height: 15em;" alt=" ... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4 cardy" style="  text-align: center; ">
+                    <img src="doc_images\freestock_2415062.jpg" class="card-img-top img img-fluid" style="height: 15em;" alt=" ... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">Bob Hope</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">General Practitioner</p>
@@ -200,9 +200,9 @@
                     <a href="# " class=" " style="background-color: #01015c; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; padding: 10px 12px; color: #fff; text-decoration: none; ">View Profile</a>
                 </div>
             </div>
-            <div class="col ">
-                <div class="card mt-4 " style=" text-align: center; ">
-                    <img src="doc_images\freestock_40667806.jpg " class="card-img-top" style="height: 15em;" alt="... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4 cardy " style=" text-align: center; ">
+                    <img src="doc_images\freestock_40667806.jpg " class="card-img-top img img-fluid" style="height: 15em;" alt="... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">James Allen</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">Dentist</p>
@@ -224,9 +224,9 @@
                     <a href="# " class=" " style="background-color: #01015c; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; padding: 10px 12px; color: #fff; text-decoration: none; ">View Profile</a>
                 </div>
             </div>
-            <div class="col ">
-                <div class="card mt-4 " style="  text-align: center; ">
-                    <img src="doc_images\freestock_41409349.jpg " class="card-img-top" style="height: 15em;" alt="... ">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mt-4  cardy" style="  text-align: center; ">
+                    <img src="doc_images\freestock_41409349.jpg " class="card-img-top img img-fluid" style="height: 15em;" alt="... ">
                     <div class="card-body " style="background-color: #36b8eb; ">
                         <p class="card-title ">Cisco Rahmon</p>
                         <p class=" " style="font-weight: 800; color: #01015c; ">Pediatrician</p>
@@ -252,55 +252,52 @@
         </div>
     </div>
 
-
-
-
-  <footer class=" text-white pt-5 mt-5 px-3 bfw-bold border-bottom border-5 border-white">
-        <div class="container">
-            <div class="row ">
-              <div class="col-lg-3  mt-1">
-                  <h2 class="med cc">MEDDICAL</h2>
-                  <p class="pb-4 cc">Leading the Way in Medical Execellence, Trusted Care.</p>
-              </div>
-              <div class="col-lg-2 col-md-3 mt-1">
-                  <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p>Important links</p></a>
-                  <a href="" class="text-decoration-none text-white cc"> Appointments </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>Doctors </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>Services </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>About Us</a> 
-              </div>
-              <div class="col-lg-3 col-md-4  mt-1">
-                  <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Contacts Us</p></a>
-                  <p class="mt-3 cc">Call: (237) 681-812-255 
-                  <br>Email: fildineesoe@gmail.com 
-                  <br>Address: 0123 Some place Some country
-                  <br></p> 
-              </div>
-              <div class="col-lg-4 col-md-5  mt-1">
-                <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Newsletter</p></a>
-                <form action="/action_page.php">
-                  <input type="email" class="form-control fornn" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Email address">
-                  <img src="./img/letter.svg"><div id="emailHelp" class="form-text"></div>
-              </form>
-              </div>
-              <div class="row">
-                  <div class="bru ms-3 border-bottom border-2 border-white justify-content-center">
-              </div>
-                <div class="row just pb-4">
-                  <div class="col-lg-8 col-md-8 col-12 pt-2 col justify-content-end">
-                    <p class="pt-5 cc">&copy; 2021 Hospital’s name All Rights Reserved by PNTEC-LTD</p>
-                  </div>
-                  <div class="col-lg-4 col-md-4 col-12 pt-5 men">
-                    <div class="row">
-                      <img src="./img/linkinin.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
-                      <img src="./img/fb.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
-                      <img src="./img/insta.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
-                    </div>
+    <footer class=" text-white pt-5 mt-5 px-3 bfw-bold border-bottom border-5 border-white">
+      <div class="container">
+          <div class="row ">
+            <div class="col-lg-3  mt-1">
+                <h2 class="med cc">MEDDICAL</h2>
+                <p class="pb-4 cc">Leading the Way in Medical Execellence, Trusted Care.</p>
+            </div>
+            <div class="col-lg-2 col-md-3 mt-1">
+                <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p>Important links</p></a>
+                <a href="appointment.html" class="text-decoration-none text-white cc"> Appointments </a>
+                <a href="doctors.html" class="text-decoration-none text-white cc"><br>Doctors </a>
+                <a href="services.html" class="text-decoration-none text-white cc"><br>Services </a>
+                <a href="about.html" class="text-decoration-none text-white cc"><br>About Us</a> 
+            </div>
+            <div class="col-lg-3 col-md-4  mt-1">
+                <a href="contact_us.html"  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Contacts Us</p></a>
+                <p class="mt-3 cc">Call: (237) 681-812-255 
+                <br>Email: fildineesoe@gmail.com 
+                <br>Address: 0123 Some place Some country
+                <br></p> 
+            </div>
+            <div class="col-lg-4 col-md-5  mt-1">
+              <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Newsletter</p></a>
+              <form action="/action_page.php">
+                <input type="email" class="form-control fornn" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Email address">
+                <img src="./img/letter.svg"><div id="emailHelp" class="form-text"></div>
+            </form>
+            </div>
+            <div class="row">
+                <div class="bru ms-3 border-bottom border-2 border-white justify-content-center">
+            </div>
+              <div class="row just pb-4">
+                <div class="col-lg-8 col-md-8 col-12 pt-2 col justify-content-end">
+                  <p class="pt-5 cc">&copy; 2021 Hospital’s name All Rights Reserved by PNTEC-LTD</p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-12 pt-5 men">
+                  <div class="row">
+                    <img src="./img/linkinin.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
+                    <img src="./img/fb.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
+                    <img src="./img/insta.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
                   </div>
                 </div>
-        </div>   
-  </footer>
+              </div>
+      </div>   
+</footer>
+  </section>
   <script src="./js/bootstrap.min.js"></script>
 </body>
-
 </html>
