--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
                     <a class="nav-link active text-white" href="doctors.html"><p id="nap">Doctors</p></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#"><p id="nap">News</p></a>
+                    <a class="nav-link active text-white" href="news.html"><p id="nap">News</p></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active text-white" href="contact_us.html"><p id="nap">Contact</p></a>
                   </li>
                 </ul>
               <form class="">
-                <a href="#"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
+                <a href="appointment.html"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
                   <button class=" py-2 px-3 text-white btnn fw-bold" type="submit">Appointment</button>
               </form>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -615,13 +615,13 @@
               </div>
               <div class="col-lg-2 col-md-3 mt-1">
                   <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p>Important links</p></a>
-                  <a href="" class="text-decoration-none text-white cc"> Appointments </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>Doctors </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>Services </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>About Us</a> 
+                  <a href="appointment.html" class="text-decoration-none text-white cc"> Appointments </a>
+                  <a href="doctors.html" class="text-decoration-none text-white cc"><br>Doctors </a>
+                  <a href="services.html" class="text-decoration-none text-white cc"><br>Services </a>
+                  <a href="about.html" class="text-decoration-none text-white cc"><br>About Us</a> 
               </div>
               <div class="col-lg-3 col-md-4  mt-1">
-                  <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Contacts Us</p></a>
+                  <a href="contact_us.html"  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Contacts Us</p></a>
                   <p class="mt-3 cc">Call: (237) 681-812-255 
                   <br>Email: fildineesoe@gmail.com 
                   <br>Address: 0123 Some place Some country
