--- a/news.html
+++ b/news.html
@@ -68,7 +68,7 @@
     </section class="container">
     <nav class="navbar px-5 py-3 navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#">
+            <a class="navbar-brand text-white" href="index.html">
                 <p id="hom">Home</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -79,22 +79,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">
+                        <a class="nav-link active text-white" aria-current="page" href="about.html">
                             <p id="nap">About us</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="#">
+                        <a class="nav-link active text-white" href="services.html">
                             <p id="nap">Services</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="#">
+                        <a class="nav-link active text-white" href="doctors.html">
                             <p id="nap">Doctors</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="#">
+                        <a class="nav-link active text-white" href="news.html">
                             <p id="nap">News</p>
                         </a>
                     </li>
@@ -107,7 +107,7 @@
                 <form class="">
                     <div class="flex">
 
-                        <a href="#"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
+                        <a href="appointment.html"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
                         <button class=" py-2 px-3 text-white btnn fw-bold nav-icon" type="submit">Appointment</button>
                     </div>
                 </form>
@@ -735,13 +735,13 @@
                     <a href="" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
                         <p>Important links</p>
                     </a>
-                    <a href="" class="text-decoration-none text-white cc"> Appointments </a>
-                    <a href="" class="text-decoration-none text-white cc"><br>Doctors </a>
-                    <a href="" class="text-decoration-none text-white cc"><br>Services </a>
-                    <a href="" class="text-decoration-none text-white cc"><br>About Us</a>
+                    <a href="appointment.html" class="text-decoration-none text-white cc"> Appointments </a>
+                    <a href="doctors.html" class="text-decoration-none text-white cc"><br>Doctors </a>
+                    <a href="services.html" class="text-decoration-none text-white cc"><br>Services </a>
+                    <a href="about.html" class="text-decoration-none text-white cc"><br>About Us</a>
                 </div>
                 <div class="col-lg-3 col-md-4  mt-1">
-                    <a href="" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
+                    <a href="contact_us.html" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
                         <p>Contacts Us</p>
                     </a>
                     <p class="mt-3 cc">Call: (237) 681-812-255
