--- a/singlenews.html
+++ b/singlenews.html
@@ -21,7 +21,7 @@
                     <div class="col-lg-4 col-12 col-md-4">
                       <div class="row" >
                         <div class="col-lg-3 col-3">
-                            <div class=""><img class="ms-3 mt-2 " src="./img/call.svg" style="width:"" alt=""></div>
+                            <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
                       </div>
                         <div class="col-9 col-lg-9">
                           <h5 class="fpp col-12">EMERGENCY</h5>
@@ -32,7 +32,7 @@
                     <div class="col-lg-4 col-12 col-md-4">
                       <div class="row">
                         <div class="col-3">
-                            <div class="col-6"><img class="ms-3 mt-2" src="./img/tim-cir.svg" style="" alt=""></div>
+                            <div class="col-6"><img class="ms-3 mt-2" src="./img/tim-cir.svg"  alt=""></div>
                         </div>
                         <div class="col-9">
                           <h5 class="col-12 fpp">WORK HOUR</h5>
@@ -44,7 +44,7 @@
                       <div class="row">
                         <div class="col-3">
                           <div class="row">
-                            <div class="col-6"><img class="ms-3 mt-2" src="./img/loc1.svg" style="" alt=""></div>
+                            <div class="col-6"><img class="ms-3 mt-2" src="./img/loc1.svg"  alt=""></div>
                           </div>
                         </div>
                         <div class="col-9">
@@ -60,30 +60,30 @@
       </section class="container">
           <nav class="navbar px-5 py-3 navbar-expand-lg navbar-light bg-primary ">
               <div class="container-fluid">
-                <a class="navbar-brand text-white" href="#"><p id="hom">Home</p></a>
+                <a class="navbar-brand text-white" href="index.html"><p id="hom">Home</p></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                       <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#"><p id="nap">About us</p></a>
+                        <a class="nav-link active text-white" aria-current="page" href="about.html"><p id="nap">About us</p></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active text-white" href="#"><p id="nap">Services</p></a>
+                        <a class="nav-link active text-white" href="services.html"><p id="nap">Services</p></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active text-white" href="#"><p id="nap">Doctors</p></a>
+                        <a class="nav-link active text-white" href="doctors.html"><p id="nap">Doctors</p></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active text-white" href="#"><p id="nap">News</p></a>
+                        <a class="nav-link active text-white" href="news.html"><p id="nap">News</p></a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active text-white" href="contact_us.html"><p id="nap">Contact</p></a>
                       </li>
                     </ul>
                   <form class="">
-                    <a href="#"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
+                    <a href="appointment.html"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
                       <button class=" py-2 px-3 text-white btnn fw-bold" type="submit">Appointment</button>
                   </form>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -224,22 +224,54 @@
                       </div>
                   </div>
                </section>
-               <script src="./js/bootstrap.min.js"></script>   
-</body>
-</html>
-
-
-    
-   <br>
-    {% block content%}
-
-    <br>
-    
-    {% endblock %}
-
-
-
-
+               <div class="pb-5 container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-12 my-2">
+                        <section class="sky-blue rounded">
+                            <div class="blue-content p-5">
+                                <img src="img/Group 77.png" class="pb-3" alt="">
+                                <p class="p-0 bch"><b>EMERGENCY</b></p>
+                                <P class="p-0"><small>(237) 681-812-255</small></P>
+                                <P class="p-0"><small>(237) 666-331-894</small></P>
+                            </div>
+                        </section>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 my-2">
+                        <section class="dark-blue rounded">
+                            <div class="blue-content p-5">
+                                <img src="img/Group 77 (1).png" class="pb-3" alt="">
+                                <p class="py-0"><b>LOCATION</b></p>
+                                <P class="p-0"><small>0123 Some place</small></P>
+                                <P class="p-0"><small>9876 Some country</small></P>
+                            </div>
+                        </section>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 my-2">
+                        <section class="sky-blue rounded">
+                            <div class="blue-content p-5">
+                                <img src="img/Group 77 (2).png" class="pb-3" alt="">
+                                <p class="p-0 bch"><b>EMAIL</b></p>
+                                <P class="p-0"><small>fildineeesoe@gmil.com</small></P>
+                                <P class="p-0"><small>myebstudios@gmail.com</small></P>
+                            </div>
+                        </section>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 my-2">
+                        <section class="sky-blue rounded">
+                            <div class="blue-content p-5">
+                                <img src="img/Group 77 (3).png" class="pb-3" alt="">
+                                <p class="p-0 bch"><b>WORKING HOURS</b></p>
+                                <P class="p-0"><small>Mon-Sat 09:00-20:00</small></P>
+                                <P class="p-0"><small>Sunday Emergency only</small></P>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
+            </div>
+                    </div>
+                </div>
+            </section>
 
   <footer class=" text-white pt-5 mt-5 px-3 bfw-bold border-bottom border-5 border-white">
         <div class="container">
@@ -250,13 +282,13 @@
               </div>
               <div class="col-lg-2 col-md-3 mt-1">
                   <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p>Important links</p></a>
-                  <a href="" class="text-decoration-none text-white cc"> Appointments </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>Doctors </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>Services </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>About Us</a> 
+                  <a href="appointment.html" class="text-decoration-none text-white cc"> Appointments </a>
+                  <a href="doctors.html" class="text-decoration-none text-white cc"><br>Doctors </a>
+                  <a href="services.html" class="text-decoration-none text-white cc"><br>Services </a>
+                  <a href="about.html" class="text-decoration-none text-white cc"><br>About Us</a> 
               </div>
               <div class="col-lg-3 col-md-4  mt-1">
-                  <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Contacts Us</p></a>
+                  <a href="contact_us.html"  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Contacts Us</p></a>
                   <p class="mt-3 cc">Call: (237) 681-812-255 
                   <br>Email: fildineesoe@gmail.com 
                   <br>Address: 0123 Some place Some country
