--- a/services2.html
+++ b/services2.html
@@ -12,9 +12,9 @@
 
 <body>
    <section class="fir py-4 px-2">
-        <div class="container" style="">
+        <div class="container">
             <p class="bc mb-n5 pt-5 mt-3 eight">Home/services</p>
-            <h2 class="ys fw-bold bc b" style="">Free Checkup</h2>
+            <h2 class="ys fw-bold bc b" >Free Checkup</h2>
         </div>
    </section>     
   <section>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="col">
                             <div class="card mt-4" style="  text-align: center; ">
-                                <img src="./serv2-img/doc3.png" class="card-img-top " style="img-fluid; height: auto" alt=" ... ">
+                                <img src="./serv2-img/doc3.png" class="card-img-top img-fluid" style=" height: auto" alt=" ... ">
                                 <div class="card-body bg">
                                     <p class="pt-3 sixt bc ">Doctor’s Name</p>
                                     <p class=" twenty fw-bold text-uppercase bc">Neurology</p>
