--- a/news.html
+++ b/news.html
@@ -192,7 +192,7 @@
                     ornare. Quisque placerat scelerisque tortor ornare ornare Convallis felis vitae tortor augue. Velit
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
-                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
             </div>
             <!-- end of blog 1  -->
@@ -252,7 +252,7 @@
                     ornare. Quisque placerat scelerisque tortor ornare ornare Convallis felis vitae tortor augue. Velit
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
-                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
 
             </div>
@@ -314,7 +314,7 @@
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
 
-                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
 
             </div>
@@ -376,7 +376,7 @@
                     ornare. Quisque placerat scelerisque tortor ornare ornare Convallis felis vitae tortor augue. Velit
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
-                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
 
             </div>
