--- a/singlenews.html
+++ b/singlenews.html
@@ -98,8 +98,8 @@
                 <div class="row banner-items">
                     <nav class="breadcrumb-area" aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                          <li class="breadcrumb-item"><a href="#">Home</a></li>
-                          <li class="breadcrumb-item"><a href="#">News</a></li>
+                          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                          <li class="breadcrumb-item"><a href="news.html">News</a></li>
                           <li class="breadcrumb-item"><a href="#">Health Care</a></li>
                       </nav>
                     <h1>A passion for putting patients first.</h1>
