--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <section class="img-sec">
     <div class="container">
       <div class="second-img px-md-5 px-lg-5">
-        <img src="./img/Blackdoctors 2.jpg" alt="doctors" class="img-fluid">
+        <img src="./img/Blackdoctors 1.jpg" alt="doctors" class="img-fluid w-100">
         <div class="img-b-border d-flex">
           <div class="first-line"></div>
           <div class="second-line"></div>
