--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@
                         <div class="col-lg-4 col-12 col-md-4">
                             <div class="row">
                                 <div class="col-lg-3 col-3">
-                                    <div class=""><img class="ms-3 mt-2 " src="./img/call.svg" style="width:"" alt=""></div>
+                                    <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
                           </div>
                             <div class=" col-9 col-lg-9">
                                         <h5 class="fpp col-12">EMERGENCY</h5>
@@ -38,7 +38,7 @@
                             <div class="col-lg-4 col-12 col-md-4">
                                 <div class="row">
                                     <div class="col-3">
-                                        <div class="col-6 nav-icon"><img class="ms-3 mt-2" src="./img/tim-cir.svg" style=""
+                                        <div class="col-6 nav-icon"><img class="ms-3 mt-2" src="./img/tim-cir.svg" 
                                                 alt=""></div>
                                     </div>
                                     <div class="col-9">
@@ -51,7 +51,7 @@
                                 <div class="row">
                                     <div class="col-3">
                                         <div class="row">
-                                            <div class="col-6 nav-icon"><img class="ms-3 mt-2" src="./img/loc1.svg" style=""
+                                            <div class="col-6 nav-icon"><img class="ms-3 mt-2" src="./img/loc1.svg" 
                                                     alt=""></div>
                                         </div>
                                     </div>
@@ -68,7 +68,7 @@
     </section class="container">
     <nav class="navbar px-5 py-3 navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#">
+            <a class="navbar-brand text-white" href="index.html">
                 <p id="hom">Home</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -79,22 +79,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">
+                        <a class="nav-link active text-white" aria-current="page" href="about.html">
                             <p id="nap">About us</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="#">
+                        <a class="nav-link active text-white" href="services.html">
                             <p id="nap">Services</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="#">
+                        <a class="nav-link active text-white" href="doctors.html">
                             <p id="nap">Doctors</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="#">
+                        <a class="nav-link active text-white" href="news.html">
                             <p id="nap">News</p>
                         </a>
                     </li>
@@ -107,7 +107,7 @@
                 <form class="">
                     <div class="flex">
 
-                        <a href="#"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
+                        <a href="appointment.html"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
                         <button class=" py-2 px-3 text-white btnn fw-bold nav-icon" type="submit">Appointment</button>
                     </div>
                 </form>
@@ -192,7 +192,7 @@
                     ornare. Quisque placerat scelerisque tortor ornare ornare Convallis felis vitae tortor augue. Velit
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
-                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
             </div>
             <!-- end of blog 1  -->
@@ -252,7 +252,7 @@
                     ornare. Quisque placerat scelerisque tortor ornare ornare Convallis felis vitae tortor augue. Velit
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
-                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
 
             </div>
@@ -314,7 +314,7 @@
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
 
-                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
 
             </div>
@@ -376,7 +376,7 @@
                     ornare. Quisque placerat scelerisque tortor ornare ornare Convallis felis vitae tortor augue. Velit
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
-                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
 
             </div>
