--- a/news.html
+++ b/news.html
@@ -25,15 +25,9 @@
                 <div class="col-12 col-lg-8">
                     <div class="row">
                         <div class="col-lg-4 col-12 col-md-4">
-<<<<<<< HEAD
-                            <div class="row">
-                                <div class="col-lg-3 col-3">
-                                    <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
-=======
                           <div class="row" >
                             <div class="col-lg-3 col-3">
                                 <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
->>>>>>> 2f296b37c9e3faeb7c34b758b9ac44aa98c4cffb
                           </div>
                             <div class=" col-9 col-lg-9">
                                         <h5 class="fpp col-12">EMERGENCY</h5>
@@ -201,23 +195,7 @@
                 <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
             </div>
-<<<<<<< HEAD
-            <!-- end of blog 1  -->
-            <div class="blog-post">
-
-                <img src="./img/second.png" alt="" class="blog-img">
-                <div class="blog-icons">
-
-                    <div class="blog-icon">
-
-                        <div class="icon">
-                            <img src="./img/calender.png" alt="">
-                        </div>
-                        <p>
-                            Monday 05, September 2021
-                        </p>
-=======
-          </section class="container">
+          <!-- </section class="container">
               <nav class="navbar px-5 py-3 navbar-expand-lg navbar-light bg-primary">
                   <div class="container-fluid">
                     <a class="navbar-brand text-white" href="index.html"><p id="hom">Home</p></a>
@@ -249,10 +227,9 @@
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         </button>
                       </form>
->>>>>>> 2f296b37c9e3faeb7c34b758b9ac44aa98c4cffb
-                    </div>
+                    </div> -->
 
-                    <div class="blog-icon">
+                    <!-- <div class="blog-icon">
 
                         <div class="icon">
                             <img src="./img/author.png" alt="">
@@ -282,7 +259,7 @@
                     </div>
 
 
-                </div>
+                </div> -->
 
 
                 <h4>
@@ -774,13 +751,13 @@
               </div>
               <div class="col-lg-2 col-md-3 mt-1">
                   <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p>Important links</p></a>
-                  <a href="" class="text-decoration-none text-white cc"> Appointments </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>Doctors </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>Services </a>
-                  <a href="" class="text-decoration-none text-white cc"><br>About Us</a> 
+                  <a href="appointment.html" class="text-decoration-none text-white cc"> Appointments </a>
+                  <a href="doctors.html" class="text-decoration-none text-white cc"><br>Doctors </a>
+                  <a href="services.html" class="text-decoration-none text-white cc"><br>Services </a>
+                  <a href="about.html" class="text-decoration-none text-white cc"><br>About Us</a> 
               </div>
               <div class="col-lg-3 col-md-4  mt-1">
-                  <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Contacts Us</p></a>
+                  <a href="contact_us.html"  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Contacts Us</p></a>
                   <p class="mt-3 cc">Call: (237) 681-812-255 
                   <br>Email: fildineesoe@gmail.com 
                   <br>Address: 0123 Some place Some country
@@ -790,7 +767,7 @@
                 <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Newsletter</p></a>
                 <form action="/action_page.php">
                   <input type="email" class="form-control fornn" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Email address">
-                  <!-- <img src="./img/letter.svg " class="nav-icon"><div id="emailHelp" class="form-text"></div> -->
+                  <img src="./img/letter.svg"><div id="emailHelp" class="form-text"></div>
               </form>
               </div>
               <div class="row">
@@ -810,11 +787,7 @@
                 </div>
         </div>   
   </footer>
-
-
+    </section>
     <script src="./js/bootstrap.min.js"></script>
-
-
-</body>
-
+  </body>
 </html>
